# rime-schema-manager

./: Cargo.toml  LICENSE  README.md  schema_manager
src/: cli.rs  main.rs
