[package]
name = "rime-schema-manager"
version = "0.2.4"
authors = ["eatradish <sakiiily@aosc.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^3", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
lto = true
