[package]
name = "rime-schema-manager"
version = "0.2.5-alpha.0"
authors = ["eatradish <sakiiily@aosc.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "^4", features = ["derive"] }
serde_yaml = "0.9"
anyhow = "^1"
serde = { version = "^1", features = ["derive"] }

[profile.release]
lto = true
